--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -140,7 +140,7 @@
                 android:fontFamily="@font/ubuntu"
                 android:text="Already have an account? Sign In"
                 android:textColor="@color/colorPrimaryText"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:layout_marginTop="10dp"/>
 
         </LinearLayout>
