--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorSecondaryVariant"
+    android:background="#FBFCFE"
     tools:context=".ui.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,10 +26,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/ubuntu_medium"
                 android:letterSpacing="0.03"
                 android:text="WELCOME BACK"
-                android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorPrimary"
                 android:textSize="28dp" />
 
@@ -44,82 +42,66 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorSecondaryText"
             android:gravity="center"
             android:padding="15dp"
             android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
+                android:id="@+id/login_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxBackgroundMode="outline"
-                app:startIconDrawable="@drawable/ic_email"
-                app:endIconMode="clear_text"
-                app:startIconTint="@color/colorSecondaryText"
+                android:layout_height="45dp"
+                android:background="@drawable/forget"
                 android:hint="Email"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/login_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button2"
-                    android:inputType="text"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:boxBackgroundMode="outline"
-                app:startIconDrawable="@drawable/ic_lock"
-                app:endIconMode="password_toggle"
-                app:startIconTint="@color/colorSecondaryText"
-                app:endIconTint="@color/colorPrimaryText"
-                android:hint="Password"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/login_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button2"
-                    android:inputType="textPassword"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-<!--            <EditText-->
-<!--                android:layout_marginTop="30dp"-->
-<!--                android:id="@+id/login_email"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:background="@drawable/forget"-->
-<!--                android:hint="Email"-->
-<!--                android:textColor="@color/colorPrimaryText"-->
-<!--                android:textSize="14sp" />-->
-
-<!--            <EditText-->
-<!--                android:id="@+id/login_password"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="45dp"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:background="@drawable/forget"-->
-<!--                android:inputType="textPassword"-->
-<!--                android:hint="Password"-->
-<!--                android:textColor="@color/colorPrimaryText"-->
-<!--                android:textSize="14sp" />-->
-
-            <TextView
-                android:id="@+id/forgot_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:fontFamily="@font/ubuntu"
-                android:text="Forgot Password?"
-                android:layout_margin="15dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimaryText"
                 android:textSize="14sp" />
+            <EditText
+                android:id="@+id/reg_phone"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/forget"
+                android:layout_marginTop="10dp"
+                android:hint="Phone Number"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/forget"
+                android:inputType="textPassword"
+                android:hint="Password"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="14sp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/forgot_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:text="Forgot Password?"
+                        android:layout_weight="1"
+                        android:layout_margin="15dp"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="14sp" />
+                    <com.rey.material.widget.CheckBox
+                        android:id="@+id/remember_me_chkb"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_margin="15dp"
+                        android:layout_weight="0"
+                        android:text="Remember Me"
+                        android:textColor="@color/colorAccent"
+                        app:cbd_strokeColor="@color/colorPrimaryDark"
+                        android:gravity="center_vertical"
+                        android:textSize="14sp"
+                        />
+        </LinearLayout>
 
             <Button
                 android:id="@+id/loginbtn"
@@ -127,18 +109,52 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/button"
-                android:fontFamily="@font/ubuntu"
                 android:text="Login"
                 android:textColor="#FFF"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/admin_panel_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Admin?"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/login_btn"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="80dp"
+                android:layout_marginEnd="23dp"
+                />
+            <TextView
+                android:id="@+id/not_admin_panel_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not Admin?"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/login_btn"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_weight="0"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="80dp"
+                android:layout_marginStart="25dp"
+                android:visibility="invisible"
+                />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/logintxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/ubuntu"
                 android:text="Don't have an account? Sign Up"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="16sp" />
@@ -149,7 +165,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/ubuntu"
                 android:text="OR"
                 android:textColor="@color/colorDivider"
                 android:textSize="14sp" />
@@ -164,7 +179,6 @@
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:borderWidth="0dp"
                     android:backgroundTint="@color/colorPrimaryLight"
                     android:src="@drawable/google"
                     android:layout_margin="11dp"
@@ -173,7 +187,6 @@
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:borderWidth="0dp"
                     android:backgroundTint="@color/colorPrimaryLight"
                     android:layout_margin="11dp"
                     android:layout_weight="1"
@@ -183,7 +196,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimaryLight"
-                    app:borderWidth="0dp"
                     android:src="@drawable/twitter"
                     android:layout_margin="11dp"
                     android:layout_weight="1"/>
