--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -16,10 +16,15 @@
         android:layout_marginTop="20dp">
 
         <Button
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_chevron_left_24"
-            android:onClick="previousWeekAction" />
+            android:layout_weight="1"
+            android:text="@string/back"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="@color/colorSecondaryText"
+            android:textStyle="bold"
+            android:onClick="previousWeekAction"
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/monthYearTV"
@@ -27,16 +32,20 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="Feb 2021"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textAlignment="center"
-            android:fontFamily="@font/ubuntu_medium"
-            android:textColor="@color/colorPrimaryText"/>
+            android:textColor="@color/colorPrimaryDark"/>
 
         <Button
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_baseline_chevron_right_24"
-            android:onClick="nextWeekAction" />
+            android:layout_weight="1"
+            android:text="Next"
+            android:textColor="#fff"
+            android:background="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:onClick="nextWeekAction"
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
@@ -50,70 +59,63 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SUN"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="MON"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TUE"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="WED"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="THUR"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="FRI"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAT"
-            android:fontFamily="@font/ubuntu_medium"
             android:textColor="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:textSize="14sp"/>
+            android:textSize="16sp"/>
 
 
     </LinearLayout>
@@ -129,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Task"
-        android:textColor="@color/colorSecondaryText"
+        android:textColor="@color/colorPrimaryDark"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="newEventAction"
