--- a/app/src/main/res/layout/activity_add_new_task.xml
+++ b/app/src/main/res/layout/activity_add_new_task.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context="ui.AddNewTask">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/task_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:backgroundTint="@color/colorPrimaryDark"
         android:hint="Write Your Task Here ...."
+        android:fontFamily="@font/poppins_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,16 +30,20 @@
         android:text="Set Due Date"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
+        android:fontFamily="@font/poppins_regular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_edittext" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Save"
+        android:fontFamily="@font/poppins_regular"
+        android:textColor="@color/colorSecondaryText"
+        android:backgroundTint="@color/colorButtons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_edittext" />
 
