--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
             android:padding="15dp"
             android:orientation="vertical">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_email"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -54,7 +54,7 @@
                 android:hint="Email"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="14sp" />
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/reg_phone"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -64,7 +64,7 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="14sp" />
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_password"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -103,7 +103,7 @@
                         />
         </LinearLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/loginbtn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
