--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -151,44 +151,44 @@
                     android:layout_marginTop="20dp"
                     app:elevation="10dp"/>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="horizontal">-->
 
 
-                    <TextView
-                        android:id="@+id/admin_panel_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Admin?"
-                        android:layout_alignParentEnd="true"
-                        android:layout_below="@+id/login_btn"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:layout_weight="1"
-                        android:textSize="20sp"
-                        />
-                    <TextView
-                        android:id="@+id/not_admin_panel_link"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Not Admin?"
-                        android:layout_alignParentStart="true"
-                        android:layout_below="@+id/login_btn"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:layout_weight="0"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:layout_marginLeft="80dp"
-                        android:layout_marginStart="25dp"
-                        android:visibility="invisible"
-                        />
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/admin_panel_link"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Admin?"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:layout_below="@+id/login_btn"-->
+<!--                        android:textColor="@color/colorPrimaryDark"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:textSize="20sp"-->
+<!--                        />-->
+<!--                    <TextView-->
+<!--                        android:id="@+id/not_admin_panel_link"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="Not Admin?"-->
+<!--                        android:layout_alignParentStart="true"-->
+<!--                        android:layout_below="@+id/login_btn"-->
+<!--                        android:textColor="@color/colorPrimaryDark"-->
+<!--                        android:layout_weight="0"-->
+<!--                        android:textSize="20sp"-->
+<!--                        android:textStyle="bold"-->
+<!--                        android:layout_marginLeft="80dp"-->
+<!--                        android:layout_marginStart="25dp"-->
+<!--                        android:visibility="invisible"-->
+<!--                        />-->
+<!--                </LinearLayout>-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal"
                     android:gravity="center">
 
