--- a/app/src/main/res/layout/chatroom_list.xml
+++ b/app/src/main/res/layout/chatroom_list.xml
@@ -2,33 +2,34 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    >
+    android:padding="10dp"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/roomlogo"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="5dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/circle"
+        android:backgroundTint="@color/colorAccent"
         android:gravity="center"
-        android:textColor="#fff"
+        android:textColor="@color/colorSecondaryText"
         android:text="C"
         android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:fontFamily="@font/ubuntu_bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/roomname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             android:textSize="16sp"
             android:text="Chat Room"/>
 
@@ -37,8 +38,6 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:id="@+id/roomcreatedate"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
             android:text="Created on 22/6/2021"/>
 
     </LinearLayout>
