--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -9,7 +9,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/recycerlview"
+        android:id="@+id/recyclerviewtasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
