--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -78,7 +78,7 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
+<!--                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_marginTop="20dp"
@@ -100,7 +100,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:inputType="textPassword"/>
 
-                </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout> -->
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
