--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Consult" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Consult" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Secondary brand color. -->
         <item name="colorSecondary">#ff9800</item>
         <item name="colorSecondaryVariant">#ff9800</item>
