--- a/app/src/main/res/layout/activity_group_chat2.xml
+++ b/app/src/main/res/layout/activity_group_chat2.xml
@@ -3,7 +3,16 @@
         layout="@layout/app_bar_layout"> </include>
     <ScrollView android:id="@+id/my_scroll_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/group_chat_bar_layout" android:layout_above="@+id/myLinearLayout">
         <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
-            <TextView android:id="@+id/group_chat_text_display" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="10dp" android:textAllCaps="false" android:textSize="20sp" android:textColor="@android:color/background_dark" android:layout_marginStart="2dp" android:layout_marginEnd="2dp" android:layout_marginBottom="60dp"/>
+            <TextView android:id="@+id/group_chat_text_display"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="60dp"/>
         </LinearLayout>
     </ScrollView>
     <LinearLayout android:id="@+id/myLinearLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_alignParentBottom="true" android:layout_alignParentStart="true">
