--- a/app/src/main/res/layout/barlayout.xml
+++ b/app/src/main/res/layout/barlayout.xml
@@ -2,9 +2,9 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     app:popupTheme="@style/MenuStyle"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:theme="@style/Theme.Consult"
     android:layout_height="wrap_content">
 
 </androidx.appcompat.widget.Toolbar>
