--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/user"
-            app:civ_border_color="@android:color/black"
+            app:civ_border_color="@color/colorPrimaryDark"
             app:civ_border_width="1dp"
             android:layout_marginTop="10dp"
             android:id="@+id/profile_frag_image"/>
