validate phone number

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -14,6 +14,7 @@
         <item>@font/roboto_thin</item>
         <item>@font/ubuntu</item>
         <item>@font/ubuntu_bold</item>
+        <item>@font/ubuntu_italic</item>
         <item>@font/ubuntu_medium</item>
     </array>
 </resources>
