modify user profile

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -54,7 +54,8 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:elevation="12dp">
 
                         <ImageView
                             android:layout_width="80dp"
@@ -129,7 +130,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:onClick="use"
+                        android:onClick="user"
                         android:src="@drawable/ic_next"
                         android:layout_alignParentEnd="true"/>
 
